# attendcli

./: .gitignore  AttendCLI_PRD.md  README.md  pyproject.toml
attend/: __init__.py  attendance.py  cli.py  config.py  console.py  dates.py  daystate.py  journals.py  paths.py  prompts.py  schedule.py  scoring.py  storage.py  tasks_store.py  timetable.py  weeks.py
attend/commands/: __init__.py  bunks.py  daily.py  export.py  heatmap.py  marks.py  notes.py  setup.py  subjects.py  summary.py  tasks_cmd.py  weeks_cmd.py
