[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attendcli"
version = "0.1.0"
description = "Terminal-first academic survival system for tracking attendance, bunks, tasks, and marks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
attend = "attend.cli:main"

[tool.setuptools.packages.find]
include = ["attend*"]
